--- a/index.html
+++ b/index.html
@@ -89,32 +89,40 @@
                                 width="264"
                                 height="260"
                                 alt="Mark Guerrero">
-                            <h3 class="section-title">Mark Guerrero</h3>
-                            <p class="section-list-item-text">Product Designer</p>
+                            <div class="team-card">
+                                <h3 class="section-title">Mark Guerrero</h3>
+                                <p class="section-list-item-text">Product Designer</p>
+                            </div>
                         </li>
                         <li class="team-list-item">
                             <img src="./images/team/img-2.jpg"
                                 width="264"
                                 height="260"
                                 alt="Tom Ford">
-                            <h3 class="section-title">Tom Ford</h3>
-                            <p class="section-list-item-text">Frontend Developer</p>
+                            <div class="team-card">
+                                <h3 class="section-title">Tom Ford</h3>
+                                <p class="section-list-item-text">Frontend Developer</p>
+                            </div>
                         </li>
                         <li class="team-list-item">
                             <img src="./images/team/img-3.jpg"
                                 width="264"
                                 height="260"
                                 alt="Camila Garcia">
-                            <h3 class="section-title">Camila Garcia</h3>
-                            <p class="section-list-item-text">Marketing</p>
+                            <div class="team-card">
+                                <h3 class="section-title">Camila Garcia</h3>
+                                <p class="section-list-item-text">Marketing</p>
+                            </div>
                         </li>
                         <li class="team-list-item">
                             <img src="./images/team/img-4.jpg"
                                 width="264"
                                 height="260"
                                 alt="Daniel Wilson">
-                            <h3 class="section-title">Daniel Wilson</h3>
-                            <p class="section-list-item-text">UI Designer</p>
+                            <div class="team-card">
+                                <h3 class="section-title">Daniel Wilson</h3>
+                                <p class="section-list-item-text">UI Designer</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -130,48 +138,60 @@
                                 width="360"
                                 height="300"
                                 alt="Banking App">
-                            <h3 class="section-title">Banking App</h3>
-                            <p class="section-list-item-text">App</p>
+                            <div class="app-card">
+                                <h3 class="section-title">Banking App</h3>
+                                <p class="section-list-item-text">App</p>
+                            </div>
                         </li>
                         <li class="portfolio-list-item">
                             <img src="./images/portfolio/img-2.jpg"
                                 width="360"
                                 height="300"
                                 alt="Cashless Payment">
-                            <h3 class="section-title">Cashless Payment</h3>
-                            <p class="section-list-item-text">Marketing</p>
+                            <div class="app-card">
+                                <h3 class="section-title">Cashless Payment</h3>
+                                <p class="section-list-item-text">Marketing</p>
+                            </div>
                         </li>
                         <li class="portfolio-list-item">
                             <img src="./images/portfolio/img-3.jpg"
                                 width="360"
                                 height="300"
                                 alt="Meditation App">
-                            <h3 class="section-title">Meditation App</h3>
-                            <p class="section-list-item-text">App</p>
+                            <div class="app-card">
+                                <h3 class="section-title">Meditation App</h3>
+                                <p class="section-list-item-text">App</p>
+                            </div>
                         </li>
                         <li class="portfolio-list-item">
                                 <img src="./images/portfolio/img-4.jpg"
                                 width="360"
                                 height="300"
                                 alt="Taxi Service">
-                            <h3 class="section-title">Taxi Service</h3>
-                            <p class="section-list-item-text">Marketing</p>
+                            <div class="app-card">
+                                <h3 class="section-title">Taxi Service</h3>
+                                <p class="section-list-item-text">Marketing</p>
+                            </div>
                         </li>
                         <li class="portfolio-list-item">
                             <img src="./images/portfolio/img-5.jpg"
                                 width="360"
                                 height="300"
                                 alt="Screen Illustrations">
-                            <h3 class="section-title">Screen Illustrations</h3>
-                            <p class="section-list-item-text">Design</p>
+                            <div class="app-card">
+                                <h3 class="section-title">Screen Illustrations</h3>
+                                <p class="section-list-item-text">Design</p>
+                            </div>
                         </li>
                         <li class="portfolio-list-item">
                             <img src="./images/portfolio/img-6.jpg"
                                 width="360"
                                 height="300"
                                 alt="Online Courses">
-                            <h3 class="section-title">Online Courses</h3>
-                            <p class="section-list-item-text">Marketing</p>
+                            <div class="app-card">
+                                <h3 class="section-title">Online Courses</h3>
+                                <p class="section-list-item-text">Marketing</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
