--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header class="header">
             <div class="container header-container">
                 <nav class="header-nav">
-                    <a class="logo" href="./index.html">Web<span class="logo-header">Studio</span></a>
+                    <a class="logo logo-link-header" href="./index.html">Web<span class="logo-header">Studio</span></a>
                     <ul class="header-nav-list">
                         <li><a class="header-nav-link" href="./index.html">Studio</a></li>
                         <li><a class="header-nav-link" href="">Portfolio</a></li>
@@ -201,7 +201,7 @@
         <!-- Footer -->
         <footer class="section-footer">
             <div class="container footer-container"> 
-                <a class="logo" href="./index.html">Web<span class="logo-footer" >Studio</span></a>
+                <a class="logo logo-link-footer" href="./index.html">Web<span class="logo-footer" >Studio</span></a>
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>
         </footer>        
