--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <!-- Footer -->
         <footer class="section-footer">
             <div class="container footer-container"> 
-                <a class="logo logo-link-footer" href="./index.html">Web<span class="logo-footer" >Studio</span></a>
+                <a class="logo-link-footer" href="./index.html">Web<span class="logo-footer" >Studio</span></a>
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>
         </footer>        
