--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             >Web<span class="logo-header">Studio</span></a
           >
           <ul class="header-nav-list">
-            <li>
+            <li class="header-nav-list-item">
               <a class="header-nav-link active" href="./index.html">Studio</a>
             </li>
             <li><a class="header-nav-link" href="">Portfolio</a></li>
@@ -302,72 +302,108 @@
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio/img-1.jpg"
-                width="360"
-                height="300"
-                alt="Banking App"
-              />
+              <div class="portfolio-list-overlay">
+                <img
+                  src="./images/portfolio/img-1.jpg"
+                  width="360"
+                  height="300"
+                  alt="Banking App"
+                />
+                <p class="portfolio-img-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="app-card">
                 <h3 class="section-title">Banking App</h3>
                 <p class="section-list-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio/img-2.jpg"
-                width="360"
-                height="300"
-                alt="Cashless Payment"
-              />
+              <div class="portfolio-list-overlay">
+                <img
+                  src="./images/portfolio/img-2.jpg"
+                  width="360"
+                  height="300"
+                  alt="Cashless Payment"
+                />
+                <p class="portfolio-img-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="app-card">
                 <h3 class="section-title">Cashless Payment</h3>
                 <p class="section-list-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio/img-3.jpg"
-                width="360"
-                height="300"
-                alt="Meditation App"
-              />
+              <div class="portfolio-list-overlay">
+                <img
+                  src="./images/portfolio/img-3.jpg"
+                  width="360"
+                  height="300"
+                  alt="Meditation App"
+                />
+                <p class="portfolio-img-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="app-card">
                 <h3 class="section-title">Meditation App</h3>
                 <p class="section-list-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio/img-4.jpg"
-                width="360"
-                height="300"
-                alt="Taxi Service"
-              />
+              <div class="portfolio-list-overlay">
+                <img
+                  src="./images/portfolio/img-4.jpg"
+                  width="360"
+                  height="300"
+                  alt="Taxi Service"
+                />
+                <p class="portfolio-img-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="app-card">
                 <h3 class="section-title">Taxi Service</h3>
                 <p class="section-list-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio/img-5.jpg"
-                width="360"
-                height="300"
-                alt="Screen Illustrations"
-              />
+              <div class="portfolio-list-overlay">
+                <img
+                  src="./images/portfolio/img-5.jpg"
+                  width="360"
+                  height="300"
+                  alt="Screen Illustrations"
+                />
+                <p class="portfolio-img-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="app-card">
                 <h3 class="section-title">Screen Illustrations</h3>
                 <p class="section-list-item-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio/img-6.jpg"
-                width="360"
-                height="300"
-                alt="Online Courses"
-              />
+              <div class="portfolio-list-overlay">
+                <img
+                  src="./images/portfolio/img-6.jpg"
+                  width="360"
+                  height="300"
+                  alt="Online Courses"
+                />
+                <p class="portfolio-img-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="app-card">
                 <h3 class="section-title">Online Courses</h3>
                 <p class="section-list-item-text">Marketing</p>
@@ -376,18 +412,55 @@
           </ul>
         </div>
       </section>
+      
     </main>
 
     <!-- Footer -->
     <footer class="section-footer">
       <div class="container footer-container">
-        <a class="logo logo-link-footer" href="./index.html"
-          >Web<span class="logo-footer">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-container-logo">
+          <a class="logo logo-link-footer" href="./index.html"
+            >Web<span class="logo-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="footer-social">
+          <p class="footer-text social-text">Social media</p>
+          <ul class="footer-socials-list">
+            <li class="footer-socials-background">
+              <a class="footer-list-link" href="">
+                <svg class="socials-icons" width="24" height="24" fill="currentColor">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-background">
+              <a class="footer-list-link" href="">
+                <svg class="socials-icons" width="24" height="24" fill="currentColor">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-background">
+              <a class="footer-list-link" href="">
+                <svg class="socials-icons" width="24" height="24" fill="currentColor">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-background">
+              <a class="footer-list-link" href="">
+                <svg class="socials-icons" width="24" height="24" fill="currentColor">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
