--- a/index.html
+++ b/index.html
@@ -137,28 +137,28 @@
                 <ul class="section-socials-list">
                   <li class="socials-background">
                     <a class="icon-team-link" href="">
-                      <svg class="socials-icons" width="16" height="16">
+                      <svg class="socials-icons" width="16" height="16" fill="currentColor">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-background">
                     <a class="icon-team-link" href="">
-                      <svg class="socials-icons" width="16" height="16">
+                      <svg class="socials-icons" width="16" height="16" fill="currentColor">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-background">
                     <a class="icon-team-link" href="">
-                      <svg class="socials-icons" width="16" height="16">
+                      <svg class="socials-icons" width="16" height="16" fill="currentColor">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-background">
                     <a class="icon-team-link" href="">
-                      <svg class="socials-icons" width="16" height="16">
+                      <svg class="socials-icons" width="16" height="16" fill="currentColor">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -179,28 +179,28 @@
                 <ul class="section-socials-list">
                   <li class="socials-background">
                     <a class="icon-team-link" href="">
-                      <svg class="socials-icons" width="16" height="16">
+                      <svg class="socials-icons" width="16" height="16" fill="currentColor">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-background">
                     <a class="icon-team-link" href="">
-                      <svg class="socials-icons" width="16" height="16">
+                      <svg class="socials-icons" width="16" height="16" fill="currentColor">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-background">
                     <a class="icon-team-link" href="">
-                      <svg class="socials-icons" width="16" height="16">
+                      <svg class="socials-icons" width="16" height="16" fill="currentColor">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-background">
                     <a class="icon-team-link" href="">
-                      <svg class="socials-icons" width="16" height="16">
+                      <svg class="socials-icons" width="16" height="16" fill="currentColor">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -221,28 +221,28 @@
                 <ul class="section-socials-list">
                   <li class="socials-background">
                     <a class="icon-team-link" href="">
-                      <svg class="socials-icons" width="16" height="16">
+                      <svg class="socials-icons" width="16" height="16" fill="currentColor">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-background">
                     <a class="icon-team-link" href="">
-                      <svg class="socials-icons" width="16" height="16">
+                      <svg class="socials-icons" width="16" height="16" fill="currentColor">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-background">
                     <a class="icon-team-link" href="">
-                      <svg class="socials-icons" width="16" height="16">
+                      <svg class="socials-icons" width="16" height="16" fill="currentColor">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-background">
                     <a class="icon-team-link" href="">
-                      <svg class="socials-icons" width="16" height="16">
+                      <svg class="socials-icons" width="16" height="16" fill="currentColor">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -263,28 +263,28 @@
                 <ul class="section-socials-list">
                   <li class="socials-background">
                     <a class="icon-team-link" href="">
-                      <svg class="socials-icons" width="16" height="16">
+                      <svg class="socials-icons" width="16" height="16" fill="currentColor">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-background">
                     <a class="icon-team-link" href="">
-                      <svg class="socials-icons" width="16" height="16">
+                      <svg class="socials-icons" width="16" height="16" fill="currentColor">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-background">
                     <a class="icon-team-link" href="">
-                      <svg class="socials-icons" width="16" height="16">
+                      <svg class="socials-icons" width="16" height="16" fill="currentColor">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-background">
                     <a class="icon-team-link" href="">
-                      <svg class="socials-icons" width="16" height="16">
+                      <svg class="socials-icons" width="16" height="16" fill="currentColor">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
