--- a/index.html
+++ b/index.html
@@ -567,8 +567,8 @@
           </ul>
         </div>
         <div class="mail-container">
-          <p class="footer-text social-text">Subscribe</p>
           <div class="footer-form-container">
+            <p class="footer-text social-text">Subscribe</p>
             <form class="footer-form">
               <label class="mail">
                 <input
@@ -689,7 +689,7 @@
             </label>
           </div>
 
-          <button class="btn modal-form-btn" type="submit">Send</button>
+          <button class="btn modal-btn" type="submit">Send</button>
         </form>
       </div>
     </div>
