--- a/index.html
+++ b/index.html
@@ -566,33 +566,26 @@
             </li>
           </ul>
         </div>
-        <div class="mail-container">
-          <div class="footer-form-container">
-            <p class="footer-text social-text">Subscribe</p>
-            <form class="footer-form">
-              <label class="mail">
-                <input
-                  class="subscribe-input"
-                  type="email"
-                  id="subscribe-email"
-                  placeholder="E-mail"
-                  required="required"
-                  name="email"
-                />
-              </label>
-              <button class="footer-btn" type="submit">
-                Subscribe
-                <svg
-                  class="telegram"
-                  width="20"
-                  height="24"
-                  fill="currentColor"
-                >
-                  <use href="./images/icons.svg#plane"></use>
-                </svg>
-              </button>
-            </form>
-          </div>
+        <div class="footer-form-container">
+          <p class="footer-text social-text">Subscribe</p>
+          <form class="footer-form">
+            <label class="mail">
+              <input
+                class="subscribe-input"
+                type="email"
+                id="subscribe-email"
+                placeholder="E-mail"
+                required="required"
+                name="email"
+              />
+            </label>
+            <button class="footer-btn" type="submit">
+              Subscribe
+              <svg class="telegram" width="20" height="24" fill="currentColor">
+                <use href="./images/icons.svg#plane"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
