--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
         <div class="footer-form-container">
           <p class="footer-text social-text">Subscribe</p>
           <form class="footer-form">
-            <label class="mail">
+            <label class="footer-form-mail">
               <input
                 class="subscribe-input"
                 type="email"
@@ -581,7 +581,7 @@
             </label>
             <button class="footer-btn" type="submit">
               Subscribe
-              <svg class="telegram" width="20" height="24" fill="currentColor">
+              <svg class="telegram" width="24" height="24" fill="currentColor">
                 <use href="./images/icons.svg#plane"></use>
               </svg>
             </button>
