--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <header class="header hide">
       <div class="container header-container">
         <nav class="header-nav">
           <a class="logo logo-link-header" href="./index.html"
@@ -46,6 +46,15 @@
             </li>
           </ul>
         </address>
+        <button
+          class="header-burger-btn js-mobile-menu"
+          type="button"
+          aria-label="Mobilemenu"
+        >
+          <svg class="header-burger-icon" width="24" height="24">
+            <use href="./images/icons.svg#burger"></use>
+          </svg>
+        </button>
       </div>
     </header>
 
@@ -126,7 +135,12 @@
           <ul class="team-list">
             <li class="team-list-item">
               <img
-                src="./images/team/img-1.jpg"
+                srcset="
+                  ./images/team/img-01@1x.jpg 1x,
+                  ./images/team/img-01@2x.jpg 2x
+                "
+                src="./images/team/img-01@1x.jpg"
+                class="team-item-img"
                 width="264"
                 height="260"
                 alt="Mark Guerrero"
@@ -188,7 +202,12 @@
             </li>
             <li class="team-list-item">
               <img
-                src="./images/team/img-2.jpg"
+                srcset="
+                  ./images/team/img-02@1x.jpg 1x,
+                  ./images/team/img-02@2x.jpg 2x
+                "
+                src="./images/team/img-02@1x.jpg"
+                class="team-item-img"
                 width="264"
                 height="260"
                 alt="Tom Ford"
@@ -250,7 +269,12 @@
             </li>
             <li class="team-list-item">
               <img
-                src="./images/team/img-3.jpg"
+                srcset="
+                  ./images/team/img-03@1x.jpg 1x,
+                  ./images/team/img-03@2x.jpg 2x
+                "
+                src="./images/team/img-03@1x.jpg"
+                class="team-item-img"
                 width="264"
                 height="260"
                 alt="Camila Garcia"
@@ -312,7 +336,12 @@
             </li>
             <li class="team-list-item">
               <img
-                src="./images/team/img-4.jpg"
+                srcset="
+                  ./images/team/img-04@1x.jpg 1x,
+                  ./images/team/img-04@2x.jpg 2x
+                "
+                src="./images/team/img-04@1x.jpg"
+                class="team-item-img"
                 width="264"
                 height="260"
                 alt="Daniel Wilson"
@@ -384,7 +413,11 @@
             <li class="portfolio-list-item">
               <div class="portfolio-list-overlay">
                 <img
-                  src="./images/portfolio/img-1.jpg"
+                  srcset="
+                    ./images/portfolio/img-01@1x.jpg 1x,
+                    ./images/portfolio/img-01@2x.jpg 2x
+                  "
+                  src="./images/portfolio/img-01@1x.jpg"
                   width="360"
                   height="300"
                   alt="Banking App"
@@ -403,7 +436,11 @@
             <li class="portfolio-list-item">
               <div class="portfolio-list-overlay">
                 <img
-                  src="./images/portfolio/img-2.jpg"
+                  srcset="
+                    ./images/portfolio/img-02@1x.jpg 1x,
+                    ./images/portfolio/img-02@2x.jpg 2x
+                  "
+                  src="./images/portfolio/img-02@1x.jpg"
                   width="360"
                   height="300"
                   alt="Cashless Payment"
@@ -422,7 +459,11 @@
             <li class="portfolio-list-item">
               <div class="portfolio-list-overlay">
                 <img
-                  src="./images/portfolio/img-3.jpg"
+                  srcset="
+                    ./images/portfolio/img-03@1x.jpg 1x,
+                    ./images/portfolio/img-03@2x.jpg 2x
+                  "
+                  src="./images/portfolio/img-03@1x.jpg"
                   width="360"
                   height="300"
                   alt="Meditation App"
@@ -441,7 +482,11 @@
             <li class="portfolio-list-item">
               <div class="portfolio-list-overlay">
                 <img
-                  src="./images/portfolio/img-4.jpg"
+                  srcset="
+                    ./images/portfolio/img-04@1x.jpg 1x,
+                    ./images/portfolio/img-04@2x.jpg 2x
+                  "
+                  src="./images/portfolio/img-04@1x.jpg"
                   width="360"
                   height="300"
                   alt="Taxi Service"
@@ -460,7 +505,11 @@
             <li class="portfolio-list-item">
               <div class="portfolio-list-overlay">
                 <img
-                  src="./images/portfolio/img-5.jpg"
+                  srcset="
+                    ./images/portfolio/img-05@1x.jpg 1x,
+                    ./images/portfolio/img-05@2x.jpg 2x
+                  "
+                  src="./images/portfolio/img-05@1x.jpg"
                   width="360"
                   height="300"
                   alt="Screen Illustrations"
@@ -479,7 +528,11 @@
             <li class="portfolio-list-item">
               <div class="portfolio-list-overlay">
                 <img
-                  src="./images/portfolio/img-6.jpg"
+                  srcset="
+                    ./images/portfolio/img-06@1x.jpg 1x,
+                    ./images/portfolio/img-06@2x.jpg 2x
+                  "
+                  src="./images/portfolio/img-06@1x.jpg"
                   width="360"
                   height="300"
                   alt="Online Courses"
@@ -503,7 +556,7 @@
     <!-- Footer -->
     <footer class="section-footer">
       <div class="container footer-container">
-        <div class="footer-container-logo">
+        <div class="footer-box footer-container-logo">
           <a class="logo logo-link-footer" href="./index.html"
             >Web<span class="logo-footer">Studio</span></a
           >
@@ -513,7 +566,7 @@
           </p>
         </div>
 
-        <div class="footer-social">
+        <div class="footer-box footer-social">
           <p class="footer-text social-text">Social media</p>
           <ul class="footer-socials-list">
             <li class="footer-socials-background">
@@ -566,7 +619,7 @@
             </li>
           </ul>
         </div>
-        <div class="footer-form-container">
+        <div class="footer-box footer-form-container">
           <p class="footer-text social-text">Subscribe</p>
           <form class="footer-form">
             <label class="footer-form-mail">
@@ -590,11 +643,117 @@
       </div>
     </footer>
 
-    <!-- Modal -->
-    <div class="modal-overlay is-open">
+    <!-- Mobile menu -->
+
+    <div class="mobile-menu">
+      <div class="container mobile-menu-container">
+        <button class="close-btn js-mobile-menu" type="button">
+          <svg class="close-icon" width="8" height="8">
+            <use href="./images/icons.svg#cross"></use>
+          </svg>
+        </button>
+
+        <nav class="mobile-menu-nav">
+          <ul class="mobile-menu-list">
+            <li class="mobile-menu-item">
+              <a href="./index.html" class="mobile-menu-link active">Studio</a>
+            </li>
+            <li class="mobile-menu-item">
+              <a href="" class="mobile-menu-link">Portfolio</a>
+            </li>
+            <li class="mobile-menu-item">
+              <a href="" class="mobile-menu-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="mobile-menu-contacts">
+          <address class="mobile-menu-adress">
+            <ul class="mobile-menu-adress-list">
+              <li class="mobile-menu-adress-item">
+                <a
+                  class="mobile-menu-adress-link"
+                  href="mailto:info@devstudio.com"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="mobile-menu-adress-item">
+                <a
+                  class="mobile-menu-adress-link"
+                  href="tel:+110001111111"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+
+          <ul class="socials-list">
+            <li class="socials-item">
+              <a
+                href="https://www.instagram.com/"
+                class="socials-link"
+                target="_blank"
+                aria-label="instagram"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg class="socials-icon" width="16" height="16">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a
+                href="https://www.twitter.com/"
+                class="socials-link"
+                target="_blank"
+                aria-label="twitter"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg class="socials-icon" width="16" height="16">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a
+                href="https://www.facebook.com/"
+                class="socials-link"
+                target="_blank"
+                aria-label="facebook"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg class="socials-icon" width="16" height="16">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a
+                href="https://www.linkedin.com/"
+                class="socials-link"
+                target="_blank"
+                aria-label="linkedin"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg class="socials-icon" width="16" height="16">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal Contact Form -->
+    <div class="modal-overlay">
       <div class="modal">
-        <button class="modal-close-btn" type="button">
-          <svg class="modal-close-icon" width="8" height="8">
+        <button class="close-btn" type="button">
+          <svg class="close-icon" width="8" height="8">
             <use href="./images/icons.svg#cross"></use>
           </svg>
         </button>
@@ -672,17 +831,20 @@
                   <use href="./images/icons.svg#checkmark"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a
-                href="/privacy-policy"
-                class="privacy-policy-link"
-                target="_blank"
-                >Privacy Policy</a
-              >
+
+              <span class="custom-checkbox-text"
+                >I accept the terms and conditions of the
+                <a
+                  href="/privacy-policy"
+                  class="privacy-policy-link"
+                  target="_blank"
+                  >Privacy Policy</a
+                >
+              </span>
             </label>
           </div>
 
-          <button class="btn modal-btn" type="submit">Send</button>
+          <button class="btn modal-form-btn" type="submit">Send</button>
         </form>
       </div>
     </div>
